use jquery.signalR-2.4.0.min.js

--- a/AspNetSignalRSamples/AspNetSignalRSamples/Views/Home/Index.cshtml
+++ b/AspNetSignalRSamples/AspNetSignalRSamples/Views/Home/Index.cshtml
@@ -17,7 +17,7 @@
     <ul id="messages"></ul>
 </p>
 @section scripts {
-    <script src="~/Scripts/jquery.signalR-2.4.0.js"></script>
+    <script src="~/Scripts/jquery.signalR-2.4.0.min.js"></script>
     <script src="~/signalr/hubs"></script>
     <script>
         $(function () {
